# gh-stars

./: Cargo.toml
script/: build.sh
src/: ai.rs  app.rs  config.rs  github.rs  main.rs  tui.rs
