[package]
name = "gh-stars"
version = "0.1.0"
edition = "2021"
description = "A TUI application to manage GitHub starred repositories"
authors = ["GitHub Copilot"]

[dependencies]
tokio = { version = "1", features = ["full"] }
octocrab = "0.27"
ratatui = "0.22"
crossterm = "0.26"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
env_logger = "0.10"
confy = "0.5"
futures = "0.3"
async-trait = "0.1"
openai = "1.0.0-alpha.13"
